--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,157 +11,163 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>Football Assignment</title>
 </head>
+
 <body>
     <!-- Banner Section Start -->
     <div class="banner">
-            <!--Banner left part -->
+        <!--Banner left part -->
         <div class="left-banner">
-<h1>Conmebol <br> Copa America <br> 2021 </h1>
-<button>Watch Live <i class="fas fa-arrow-right"></i></button>
+            <h1>Conmebol <br> Copa America <br> 2021 </h1>
+            <button class="button-style">Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
-<!-- Banner ight image part -->
+        <!-- Banner right image part -->
         <div class="right-banner">
-<img src="images/banner.png" alt="">
+            <img class="image-style" src="images/banner.png" alt="">
         </div>
     </div>
-      <!-- Banner Section End -->
+    <!-- Banner Section End -->
 
-      <!-- player card part Start -->
-   
-      <div class="cards">
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
+    <!-- player card part Start -->
+    <div class="cards">
+        <div class="card">
+            <img src="images/players/player-2.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Lionel Messi</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Lionel Messi is a soccer player with FC Barcelona and the Argentina national team.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
+        <div class="card">
+            <img src="images/players/player-3.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Ronaldo</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Cristiano Ronaldo dos Santos GOIH ComM is a Portuguese footballer
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-4.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Marcelo Vieira</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Marcelo Vieira da Silva Júnior, known as Marcelo, is a Brazilian professional footballer
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-5.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Ángel Di María</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Ángel Fabián Di María is an Argentine professional footballer
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-6.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Kaká</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Ricardo Izecson dos Santos Leite, commonly known as Kaká or Ricardo Kaká,
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-7.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Pelé</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Edson Arantes do Nascimento, known as Pelé, is a Brazilian former footballer
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-8.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Mesut Özil</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Mesut Özil is a German professional footballer who plays as an attacking midfielder
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-9.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Samad</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Syed Abdus Samad was a British Indian football player from Bengal.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/players/player-1.png" alt="">
+            <div class="card-info">
+                <div class="card-title">
+                    <h1>Neymar Jr</h1>
+                </div>
+                <div class="card-description">
+                    <p>
+                        Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div> <!-- player card part Start -->
+
+
+    <!-- Bonus part section start -->
+    <div class="balls">
+        <img class="game-ball" src="images/football.png" alt="">
+    </div>
+    <!-- footer part start -->
+    <hr>
+    <div class="footer">
+        <div class="footer-part">
+            <img class="logo-img" src="images/Logo.png" alt="">
+            <div class="social-icons">
+                <i class="fab fa-instagram-square icon"></i>
+                <i class="fab fa-twitter-square icon"></i>
+                <i class="fab fa-youtube-square icon"></i>
+                <i class="far fa-futbol icon"></i>
+            </div>
+            <p class="copy-right">Copyright &copy; 2022 Football</p>
         </div>
     </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <img src="images/players/player-1.png" alt="">
-    <div class="card-info">
-        <div class="card-title">
-            <h1>Neymar Jr</h1>
-        </div>
-        <div class="card-description">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam soluta corrupti placeat qui adipisci commodi alias distinctio corporis?
-            </p>
-        </div>
-    </div>
-</div>
-      </div>
- 
-      <!-- footer part start -->
-      <hr>
-<div class="footer">
-          <div class="footer-part">
-          <img class="logo-img" src="images/Logo.png" alt="">
-          <div class="social-icons">
-            <i class="fab fa-instagram-square icon"></i>
-            <i class="fab fa-twitter-square icon"></i>
-            <i class="fab fa-youtube-square icon"></i>
-            <i class="far fa-futbol icon"></i>
-          </div>
-          <p class="copy-right">Copyright © 2022 Football</p>
-        </div>
-    </div>
-   
+    <!-- footer part end -->
 </body>
+
 </html>
