--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- font awesome icon -->
     <script src="https://kit.fontawesome.com/ecc552c0d1.js" crossorigin="anonymous"></script>
     <!-- add stylesheet -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Football Assignment</title>
 </head>
 
